[tool.poetry]
name = "necst-visual-validator"
version = "0.1.0"
description = ""
authors = ["Fumika Demachi"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.3"
astropy = "^4.3.1"
xarray = "^0.20.0"
necstdb = "^0.2.5"
jupyter = "^1.0.0"
n-const = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
