[tool.poetry]
name = "necst-visual-validator"
version = "0.1.0"
description = ""
authors = ["Fumika Demachi"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
matplotlib = "^3.4.3"
astropy = [
    { version = "^3.0", python = "<3.8" },
    { version = "^5.0.4", python = ">=3.8" }
]  # must be identical to n-const's constraints
xarray = "^0.20.0"
necstdb = "^0.2.5"
jupyter = "^1.0.0"
n-const = "^1.0.0"
ipython = "^7.30.1"
neclib = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"
ipykernel = "^6.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
